[package]
name = "map_ext"
version = "1.0.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Extensions to std::collections::HashMap and std::collections::BTreeMap."
license = "MIT/Apache-2.0"
homepage = "https://github.com/hawkw/map_ext.rs"
repository = "https://github.com/hawkw/map_ext.rs"
readme = "README.md"

[dependencies]

[features]
unstable = []
